@@ -28,6 +28,7 @@
 ## Technical
 ##
 
+- Commandline: Throw an error if separator character given by the user with -p option is not exactly 1 byte
 - Kernel Cache: Add kernel threads into hash computation which is later used in the kernel cache filename
 - HIP Kernels: Got rid of hip/hip_runtime.h dependancy to enable more easy integration of the HIP backend on Windows
 - SCRYPT Kernels: Add more optimized values for some new NV/AMD GPUs
